Bug Fix Dark Mode
Final?

--- a/styles.css
+++ b/styles.css
@@ -573,7 +573,7 @@ tr:hover {
     width: 100%;
     height: 100%;
     background-color: rgba(18, 18, 18, 0.5); /* Overlay warna gelap */
-    z-index: 0;
+    z-index: -1;
 }
 
 /* Hamburger Menu Styles */
